[gd_scene load_steps=9 format=2]

[ext_resource path="res://Resource/Graphic/Card/build.png" type="Texture" id=1]
[ext_resource path="res://Script/Card/ActionCard.gd" type="Script" id=2]
[ext_resource path="res://Scene/CustomTimer/CustomTimer.tscn" type="PackedScene" id=3]
[ext_resource path="res://Resource/Graphic/Card/border.png" type="Texture" id=4]
[ext_resource path="res://Font.tres" type="DynamicFont" id=5]
[ext_resource path="res://Resource/Audio/SE/pop_card.ogg" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]

[node name="ActionCard" type="KinematicBody2D"]
scale = Vector2( 0.35, 0.35 )
collision_layer = 0
collision_mask = 0
script = ExtResource( 2 )

[node name="Border" type="Sprite" parent="."]
texture = ExtResource( 4 )

[node name="Action" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="HumanSnapArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="HumanSnapArea"]
position = Vector2( -8.17435e-06, -2.85714 )
scale = Vector2( 1, 1 )
shape = SubResource( 2 )

[node name="HumanSnapPos" type="Position2D" parent="."]
position = Vector2( 0, 80 )

[node name="CustomTimer" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, -220 )

[node name="SpawnPosition" type="Position2D" parent="."]
position = Vector2( -326, 89 )

[node name="Name" type="Label" parent="."]
margin_left = -120.0
margin_top = -140.0
margin_right = 118.0
margin_bottom = -74.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
text = "Người"
align = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -5.0

[connection signal="area_entered" from="HumanSnapArea" to="." method="_on_HumanSnapArea_area_entered"]
[connection signal="area_exited" from="HumanSnapArea" to="." method="_on_HumanSnapArea_area_exited"]
